ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coineus
  namespace: coineus
  annotations:
    kubernetes.io/ingress.class: nginx
    #cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    #ingress.kubernetes.io/ssl-redirect: "true"

spec:
  # tls:
  #   - hosts:
  #     - berk.codes
  #     secretName: coineus-tls
  rules:
  - host: berk.codes
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: coineus-frontend
            port:
              number: 80
      - path: /server/(.*)
        pathType: Prefix
        backend:
          service:
            name: coineus-server
            port:
              number: 80
      - path: /price-service/(.*)
        pathType: Prefix
        backend:
          service:
            name: coineus-price-service
            port:
              number: 80
      - path: /k8stest
        pathType: Prefix
        backend:
          service:
            name: test-service
            port:
              number: 80
